drenaming salon-website.html to index.html

--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
           </li>
           <li>
             <svg style="width:12px;height:12px;stroke:var(--orchid);fill:none;stroke-width:2;display:inline;margin-right:6px" viewBox="0 0 24 24"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
-            Lagos, Nigeria
+            Port Harcourt, Nigeria
           </li>
           <li>Mon–Sat: 9am – 7pm</li>
         </ul>
@@ -719,7 +719,7 @@
         <label class="form-label">State</label>
         <select class="form-input" id="field-state" onchange="updateFee()">
           <option value="">Select state</option>
-          <option value="lagos">Lagos</option>
+          <option value="Port Harcourt">Port Harcourt</option>
           <option value="abuja">Abuja</option>
           <option value="ph">Port Harcourt</option>
           <option value="ibadan">Ibadan</option>
@@ -839,7 +839,7 @@
   let activeService = null;
   let serviceFee = 0;
 
-  const feeMap = { lagos: 0, abuja: 3000, ph: 4000, ibadan: 2500, other: 5000 };
+  const feeMap = { Port Harcourt: 0, abuja: 3000, ph: 4000, ibadan: 2500, other: 5000 };
 
   /* ── RENDER ── */
   function renderServices() {
