--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
         <label class="form-label">State</label>
         <select class="form-input" id="field-state" onchange="updateFee()">
           <option value="">Select state</option>
-          <option value="Port Harcourt">Port Harcourt</option>
+          <option value="lagos">Lagos</option>
           <option value="abuja">Abuja</option>
           <option value="ph">Port Harcourt</option>
           <option value="ibadan">Ibadan</option>
@@ -839,7 +839,7 @@
   let activeService = null;
   let serviceFee = 0;
 
-  const feeMap = { Port Harcourt: 0, abuja: 3000, ph: 4000, ibadan: 2500, other: 5000 };
+  const feeMap = { lagos: 0, abuja: 3000, ph: 4000, ibadan: 2500, other: 5000 };
 
   /* ── RENDER ── */
   function renderServices() {
