--- a/salon-website.html
+++ b/salon-website.html
@@ -756,10 +756,10 @@
   <div class="footer-inner">
     <div class="footer-grid">
       <div class="footer-brand">
-        <a href="#" class="logo">Lu<span>rahs</span></a>
+        <a href="#" class="logo">Pha<span>rahs</span></a>
         <p>Elevating beauty through artistry, care, and a deeply personal touch since 2017.</p>
         <div class="social-icons">
-          <a class="social-icon" href="#" aria-label="Instagram">
+          <a class="social-icon" href="https://www.instagram.com/pharahssalon/" aria-label="Instagram">
             <svg viewBox="0 0 24 24"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
           </a>
           <a class="social-icon" href="#" aria-label="Twitter">
@@ -777,8 +777,8 @@
         <h4>Services</h4>
         <ul>
           <li><a href="#services">Hair Styling</a></li>
-          <li><a href="#services">Balayage & Color</a></li>
-          <li><a href="#services">Skincare Facials</a></li>
+          <li><a href="#services">Washing</a></li>
+          <li><a href="#services">Retouching</a></li>
           <li><a href="#services">Nail Art</a></li>
           <li><a href="#services">Bridal Packages</a></li>
         </ul>
@@ -798,15 +798,15 @@
         <ul>
           <li>
             <svg style="width:12px;height:12px;stroke:var(--orchid);fill:none;stroke-width:2;display:inline;margin-right:6px" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07A19.5 19.5 0 0 1 4.69 12a19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 3.6 1.27h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L7.91 8.96a16 16 0 0 0 6.29 6.29l1.06-.87a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-            +234 800 000 0000
+            +234 703 429 5852
           </li>
           <li>
             <svg style="width:12px;height:12px;stroke:var(--orchid);fill:none;stroke-width:2;display:inline;margin-right:6px" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
-            <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="9ef6fbf2f2f1def2ebf3f7fbecfbedfff2f1f0b0fdf1f3">[email&#160;protected]</a>
+            <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="9ef6fbf2f2f1def2ebf3f7fbecfbedfff2f1f0b0fdf1f3">baalebat82@gmail.com</a>
           </li>
           <li>
             <svg style="width:12px;height:12px;stroke:var(--orchid);fill:none;stroke-width:2;display:inline;margin-right:6px" viewBox="0 0 24 24"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
-            Lagos, Nigeria
+            Port Harcourt, Nigeria
           </li>
           <li>Mon–Sat: 9am – 7pm</li>
         </ul>
@@ -852,7 +852,6 @@
       <div class="form-group">
         <label class="form-label">State</label>
         <select class="form-input" id="field-state" onchange="updateFee()">
-          <option value="">Select state</option>
           <option value="lagos">Lagos</option>
           <option value="abuja">Abuja</option>
           <option value="ph">Rivers</option>
@@ -979,10 +978,9 @@
       <div class="form-group">
         <label class="form-label">State</label>
         <select class="form-input" id="order-state" onchange="updateOrderTotal()">
-          <option value="">Select state</option>
           <option value="lagos">Lagos</option>
           <option value="abuja">Abuja</option>
-          <option value="ph">Port Harcourt</option>
+          <option value="ph">Rivers</option>
           <option value="ibadan">Ibadan</option>
           <option value="other">Other</option>
         </select>
@@ -1052,23 +1050,23 @@
       name: "Signature Hair Styling",
       desc: "A complete wash, cut, and blow-dry experience tailored to your hair type and personal aesthetic.",
       price: 15000,
-      duration: "90 min",
+      duration: "1.3 hrs",
       icon: `<svg viewBox="0 0 24 24"><path d="M9.5 2A2.5 2.5 0 0 1 12 4.5v15a2.5 2.5 0 0 1-4.96-.46 2.5 2.5 0 0 1-1.07-3 2.5 2.5 0 0 1 .3-4.48A2.5 2.5 0 0 1 9.5 2z"/><path d="M14.5 2A2.5 2.5 0 0 0 12 4.5v15a2.5 2.5 0 0 0 4.96-.46 2.5 2.5 0 0 0 1.07-3 2.5 2.5 0 0 0-.3-4.48A2.5 2.5 0 0 0 14.5 2z"/></svg>`
     },
     {
       id: 2,
-      name: "Balayage & Color",
+      name: "Washing & Retouching",
       desc: "Sun-kissed, dimensional color techniques applied by our color specialists for a natural, radiant result.",
       price: 35000,
-      duration: "3 hrs",
+      duration: "2.5 hrs",
       icon: `<svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M8.56 2.75c4.37 6.03 6.02 9.42 8.03 17.72m2.54-15.38c-3.72 4.35-8.94 5.66-16.88 5.85m19.5 1.9c-3.5-.93-6.63-.82-8.94 0-2.58.92-5.01 2.86-7.44 6.32"/></svg>`
     },
     {
       id: 3,
-      name: "Luxury Facial",
+      name: "Revamp",
       desc: "Deep cleansing, exfoliation, and nourishing mask treatment for visibly brighter, smoother skin.",
       price: 20000,
-      duration: "60 min",
+      duration: "1 hr",
       icon: `<svg viewBox="0 0 24 24"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg>`
     },
     {
@@ -1076,7 +1074,7 @@
       name: "Nail Art Studio",
       desc: "Creative nail designs, gel overlays, and extensions crafted by our expert nail technicians.",
       price: 8500,
-      duration: "75 min",
+      duration: "30 min",
       icon: `<svg viewBox="0 0 24 24"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>`
     }
   ];
@@ -1098,7 +1096,7 @@
     {
       id: 1,
       name: "Pharahs Glow Serum",
-      tagline: "Radiance in every drop",
+      tagline: "New Arrival",
       badge: "Bestseller",
       price: 12500,
       image: "https://images.unsplash.com/photo-1620916566398-39f1143ab7be?w=600&q=80",
@@ -1227,7 +1225,7 @@
   async function verifyPaymentAndNotify(reference, orderDetails) {
     closeModal('order-overlay');
     try {
-      const res = await fetch('http://localhost:3000/verify-payment', {
+      const res = await fetch('https://your-backend.com/verify-payment', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
