--- a/salon-website.html
+++ b/salon-website.html
@@ -551,7 +551,7 @@
 
   /* Item detail modal specifics */
   .item-detail-header {
-    height: 180px; border-radius: 1rem; margin-bottom: 1.5rem;
+    width: 300px; max-width: 100%; height: 300px; border-radius: 1rem; margin: 0 auto 1.5rem;
     display: grid; place-items: center; position: relative; overflow: hidden;
   }
   .item-detail-header-icon {
@@ -1099,7 +1099,7 @@
       tagline: "New Arrival",
       badge: "Bestseller",
       price: 9500,
-      image: "https://images.unsplash.com/photo-1620916566398-39f1143ab7be?w=600&q=80",
+      image: "Images/HairButteredNectar.webp?w=600&q=80",
       description: "A lightweight, fast-absorbing vitamin C serum that visibly brightens skin tone, fades dark spots, and restores a luminous, glass-skin effect. Formulated for all skin types including sensitive skin, our serum delivers professional-grade radiance you can see and feel from the first use.",
       howToUse: "Apply 3–4 drops to clean, dry skin every morning before moisturiser and SPF. Gently pat onto face, neck, and décolleté. For best results, use consistently for 4–6 weeks. Avoid contact with eyes.",
       ingredients: ["Vitamin C 15%", "Hyaluronic Acid", "Niacinamide", "Ferulic Acid", "Rosehip Oil", "Aloe Vera", "Green Tea Extract"]
@@ -1110,7 +1110,7 @@
       tagline: "Salon-smooth, every wash",
       badge: "New Arrival",
       price: 9500,
-      image: "https://images.unsplash.com/photo-1522338242992-e1a54906a8da?w=600&q=80",
+      image: "Images/HairGingerOil.webp?w=600&q=80",
       description: "An ultra-nourishing hair elixir crafted with rare botanical oils and strengthening proteins to transform dry, brittle, or chemically treated hair. Leaves your strands silky, frizz-free, and brilliantly shiny — exactly as if you just stepped out of our salon. Suitable for all hair textures.",
       howToUse: "After shampooing, apply a coin-sized amount to damp hair from mid-length to ends. Leave for 2 minutes, then rinse thoroughly. For a deep treatment, apply to dry hair, cover with a warm towel, leave for 20 minutes, then wash out. Use 2–3 times per week.",
       ingredients: ["Argan Oil", "Keratin Complex", "Castor Oil", "Shea Butter", "Biotin", "Silk Proteins", "Baobab Extract", "Vitamin E"]
@@ -1121,7 +1121,7 @@
       tagline: "Salon-smooth, every wash",
       badge: "New Arrival",
       price: 9500,
-      image: "https://images.unsplash.com/photo-1522338242992-e1a54906a8da?w=600&q=80",
+      image: "Images/HairCharm.webp?w=600&q=80",
       description: "An ultra-nourishing hair elixir crafted with rare botanical oils and strengthening proteins to transform dry, brittle, or chemically treated hair. Leaves your strands silky, frizz-free, and brilliantly shiny — exactly as if you just stepped out of our salon. Suitable for all hair textures.",
       howToUse: "After shampooing, apply a coin-sized amount to damp hair from mid-length to ends. Leave for 2 minutes, then rinse thoroughly. For a deep treatment, apply to dry hair, cover with a warm towel, leave for 20 minutes, then wash out. Use 2–3 times per week.",
       ingredients: ["Argan Oil", "Keratin Complex", "Castor Oil", "Shea Butter", "Biotin", "Silk Proteins", "Baobab Extract", "Vitamin E"]
