--- a/index.html
+++ b/index.html
@@ -579,6 +579,30 @@
     border-radius: 2rem;
   }
 
+  .service-pick-card {
+    display: flex; align-items: center; gap: 1rem;
+    padding: 1rem 1.1rem;
+    border: 1.5px solid rgba(107,63,160,0.12);
+    border-radius: 1rem; cursor: pointer;
+    transition: all 0.2s; background: var(--mist);
+  }
+  .service-pick-card:hover {
+    border-color: var(--violet); background: var(--blush);
+    transform: translateY(-1px); box-shadow: 0 4px 16px rgba(61,26,94,0.08);
+  }
+  .service-pick-icon {
+    width: 44px; height: 44px; border-radius: 0.75rem;
+    background: linear-gradient(135deg,rgba(61,26,94,0.08),rgba(107,63,160,0.12));
+    display: flex; align-items: center; justify-content: center; flex-shrink: 0;
+  }
+  .service-pick-icon svg { width: 20px; height: 20px; stroke: var(--plum); fill: none; stroke-width: 1.75; stroke-linecap: round; stroke-linejoin: round; }
+  .service-pick-info { flex: 1; min-width: 0; }
+  .service-pick-name { font-size: 0.95rem; font-weight: 500; color: var(--ink); margin-bottom: 2px; }
+  .service-pick-meta { font-size: 0.78rem; color: rgba(15,10,20,0.45); }
+  .service-pick-price { font-size: 0.95rem; font-weight: 600; color: var(--plum); white-space: nowrap; }
+  .service-pick-arrow { opacity: 0.3; transition: opacity 0.2s; }
+  .service-pick-card:hover .service-pick-arrow { opacity: 1; }
+
   .modal-btn-ghost {
     width: 100%; background: transparent; color: var(--plum);
     border: 1.5px solid rgba(107,63,160,0.25); cursor: pointer;
@@ -802,7 +826,7 @@
           </li>
           <li>
             <svg style="width:12px;height:12px;stroke:var(--orchid);fill:none;stroke-width:2;display:inline;margin-right:6px" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
-            <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="9ef6fbf2f2f1def2ebf3f7fbecfbedfff2f1f0b0fdf1f3"><span class="__cf_email__" data-cfemail="eb898a8a878e898a9fd3d9ab8c868a8287c5888486">[email&#160;protected]</span></a>
+            <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="9ef6fbf2f2f1def2ebf3f7fbecfbedfff2f1f0b0fdf1f3"><span class="__cf_email__" data-cfemail="7a181b1b161f181b0e42483a1d171b131654191517">[email&#160;protected]</span></a>
           </li>
           <li>
             <svg style="width:12px;height:12px;stroke:var(--orchid);fill:none;stroke-width:2;display:inline;margin-right:6px" viewBox="0 0 24 24"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
@@ -819,6 +843,19 @@
     </div>
   </div>
 </footer>
+
+<!-- SERVICE PICKER MODAL -->
+<div class="modal-overlay" id="service-picker-overlay" onclick="closeOnOverlay(event,'service-picker-overlay')">
+  <div class="modal" style="max-width:520px;">
+    <button class="modal-close" onclick="closeModal('service-picker-overlay')">
+      <svg viewBox="0 0 24 24"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+    </button>
+    <span class="modal-tag">Book Appointment</span>
+    <h2 class="modal-title">Choose a Service</h2>
+    <p class="modal-sub">Select the service you'd like to book and we'll get you set up.</p>
+    <div id="service-picker-list" style="display:flex;flex-direction:column;gap:0.75rem;"></div>
+  </div>
+</div>
 
 <!-- BOOKING MODAL -->
 <div class="modal-overlay" id="booking-overlay" onclick="closeOnOverlay(event,'booking-overlay')">
@@ -1044,35 +1081,75 @@
   const services = [
     {
       id: 1,
-      name: "Signature Hair Styling",
-      desc: "A complete wash, cut, and blow-dry experience tailored to your hair type and personal aesthetic.",
-      price: 15000,
-      duration: "90 min",
+      name: "Hair Grooming",
+      desc: "A thorough hair grooming session including wash, treatment, and styling tailored to your hair type.",
+      price: 10000,
+      duration: "2 hrs",
       icon: `<svg viewBox="0 0 24 24"><path d="M9.5 2A2.5 2.5 0 0 1 12 4.5v15a2.5 2.5 0 0 1-4.96-.46 2.5 2.5 0 0 1-1.07-3 2.5 2.5 0 0 1 .3-4.48A2.5 2.5 0 0 1 9.5 2z"/><path d="M14.5 2A2.5 2.5 0 0 0 12 4.5v15a2.5 2.5 0 0 0 4.96-.46 2.5 2.5 0 0 0 1.07-3 2.5 2.5 0 0 0-.3-4.48A2.5 2.5 0 0 0 14.5 2z"/></svg>`
     },
     {
       id: 2,
-      name: "Balayage & Color",
-      desc: "Sun-kissed, dimensional color techniques applied by our color specialists for a natural, radiant result.",
-      price: 35000,
-      duration: "3 hrs",
-      icon: `<svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M8.56 2.75c4.37 6.03 6.02 9.42 8.03 17.72m2.54-15.38c-3.72 4.35-8.94 5.66-16.88 5.85m19.5 1.9c-3.5-.93-6.63-.82-8.94 0-2.58.92-5.01 2.86-7.44 6.32"/></svg>`
+      name: "Retouching",
+      desc: "Professional hair retouching service to refresh your roots, colour, or style for a polished finish.",
+      price: 10000,
+      duration: "2 hrs 30 min",
+      icon: `<svg viewBox="0 0 24 24"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>`
     },
     {
       id: 3,
-      name: "Luxury Facial",
-      desc: "Deep cleansing, exfoliation, and nourishing mask treatment for visibly brighter, smoother skin.",
-      price: 20000,
-      duration: "60 min",
+      name: "Hair Breakage Treatment",
+      desc: "Intensive repair treatment targeting breakage, strengthening strands and restoring hair health from root to tip.",
+      price: 15000,
+      duration: "3 hrs",
       icon: `<svg viewBox="0 0 24 24"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg>`
     },
     {
       id: 4,
-      name: "Nail Art Studio",
-      desc: "Creative nail designs, gel overlays, and extensions crafted by our expert nail technicians.",
-      price: 8500,
-      duration: "75 min",
-      icon: `<svg viewBox="0 0 24 24"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>`
+      name: "Dandruff Treatment",
+      desc: "Targeted scalp treatment to eliminate dandruff and restore scalp balance. Once weekly for the first 2 weeks, then every 2 weeks.",
+      price: 15000,
+      duration: "2 hrs 10 min",
+      icon: `<svg viewBox="0 0 24 24"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>`
+    },
+    {
+      id: 5,
+      name: "Braiding — Large",
+      desc: "Large-sized braids crafted with precision and care for a bold, long-lasting protective style.",
+      price: 14000,
+      duration: "4 hrs",
+      icon: `<svg viewBox="0 0 24 24"><path d="M6 3v18M12 3v18M18 3v18M3 9c0 0 3 3 3 6s-3 6-3 6M9 9c0 0 3 3 3 6s-3 6-3 6M15 9c0 0 3 3 3 6s-3 6-3 6"/></svg>`
+    },
+    {
+      id: 6,
+      name: "Braiding — Medium",
+      desc: "Medium-sized braids offering the perfect balance between style and manageability for any occasion.",
+      price: 18000,
+      duration: "3 hrs",
+      icon: `<svg viewBox="0 0 24 24"><path d="M6 3v18M12 3v18M18 3v18M3 9c0 0 3 3 3 6s-3 6-3 6M9 9c0 0 3 3 3 6s-3 6-3 6M15 9c0 0 3 3 3 6s-3 6-3 6"/></svg>`
+    },
+    {
+      id: 7,
+      name: "Braiding — Small",
+      desc: "Intricate small-sized braids for a detailed, elegant protective style that lasts for weeks.",
+      price: 23000,
+      duration: "2 hrs",
+      icon: `<svg viewBox="0 0 24 24"><path d="M6 3v18M12 3v18M18 3v18M3 9c0 0 3 3 3 6s-3 6-3 6M9 9c0 0 3 3 3 6s-3 6-3 6M15 9c0 0 3 3 3 6s-3 6-3 6"/></svg>`
+    },
+    {
+      id: 8,
+      name: "Wig Revamp",
+      desc: "Restore and refresh your wig with a full revamp including wash, conditioning, restyling and repair.",
+      price: 22000,
+      duration: "2 hrs",
+      icon: `<svg viewBox="0 0 24 24"><circle cx="12" cy="8" r="5"/><path d="M3 21v-2a7 7 0 0 1 7-7h4a7 7 0 0 1 7 7v2"/></svg>`
+    },
+    {
+      id: 9,
+      name: "Wig Installation",
+      desc: "Professional wig installation for a natural, seamless look with secure fit and flawless finish.",
+      price: 30000,
+      duration: "1 hr 30 min",
+      icon: `<svg viewBox="0 0 24 24"><circle cx="12" cy="8" r="5"/><path d="M3 21v-2a7 7 0 0 1 7-7h4a7 7 0 0 1 7 7v2"/><path d="M12 3v5m0 0l-2-2m2 2l2-2"/></svg>`
     }
   ];
 
@@ -1081,11 +1158,6 @@
     { name: "Chidinma E.", role: "Bridal Client", text: "I booked the bridal package and they absolutely exceeded my expectations. I felt like royalty on my wedding day. Highly recommend!", stars: 5 },
     { name: "Fatima M.", role: "New Client", text: "Found Pharahs online and took a chance — best decision ever. The stylists are knowledgeable, warm, and genuinely talented.", stars: 5 },
   ];
-
-  /* ── BACKEND URL ── */
-  const BACKEND = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
-    ? 'http://localhost:3000'
-    : 'https://fara-production.up.railway.app';
 
   /* ── STATE ── */
   let activeService = null;
@@ -1098,7 +1170,7 @@
       tagline: "Radiance in every drop",
       badge: "Bestseller",
       price: 9500,
-      image: "Images/HairButteredNectar.webp?w=600&q=80",
+      image: "images/HairButteredNectar.webp?w=600&q=80",
       description: "A lightweight, fast-absorbing vitamin C serum that visibly brightens skin tone, fades dark spots, and restores a luminous, glass-skin effect. Formulated for all skin types including sensitive skin, our serum delivers professional-grade radiance you can see and feel from the first use.",
       howToUse: "Apply 3–4 drops to clean, dry skin every morning before moisturiser and SPF.Gently pat onto face, neck, and décolleté. For best results, use consistently for 4–6 weeks. Avoid contact with eyes.",
       ingredients: ["Vitamin C 15%", "Hyaluronic Acid", "Niacinamide", "Ferulic Acid", "Rosehip Oil", "Aloe Vera", "Green Tea Extract"]
@@ -1109,7 +1181,7 @@
       tagline: "Salon-smooth, every wash",
       badge: "New Arrival",
       price: 9500,
-      image: "Images/HairCharm.webp?w=600&q=80",
+      image: "images/HairCharm.webp?w=600&q=80",
       description: "An ultra-nourishing hair elixir crafted with rare botanical oils and strengthening proteins to transform dry, brittle, or chemically treated hair. Leaves your strands silky, frizz-free, and brilliantly shiny — exactly as if you just stepped out of our salon. Suitable for all hair textures.",
       howToUse: "After shampooing, apply a coin-sized amount to damp hair from mid-length to ends. Leave for 2 minutes, then rinse thoroughly. For a deep treatment, apply to dry hair, cover with a warm towel, leave for 20 minutes, then wash out. Use 2–3 times per week.",
       ingredients: ["Argan Oil", "Keratin Complex", "Castor Oil", "Shea Butter", "Biotin", "Silk Proteins", "Baobab Extract", "Vitamin E"]
@@ -1120,7 +1192,7 @@
       tagline: "Salon-smooth, every wash",
       badge: "New Arrival",
       price: 9500,
-      image: "Images/HairGingerOil.webp?w=600&q=80",
+      image: "images/HairGingerOil.webp?w=600&q=80",
       description: "An ultra-nourishing hair elixir crafted with rare botanical oils and strengthening proteins to transform dry, brittle, or chemically treated hair. Leaves your strands silky, frizz-free, and brilliantly shiny — exactly as if you just stepped out of our salon. Suitable for all hair textures.",
       howToUse: "After shampooing, apply a coin-sized amount to damp hair from mid-length to ends. Leave for 2 minutes, then rinse thoroughly. For a deep treatment, apply to dry hair, cover with a warm towel, leave for 20 minutes, then wash out. Use 2–3 times per week.",
       ingredients: ["Argan Oil", "Keratin Complex", "Castor Oil", "Shea Butter", "Biotin", "Silk Proteins", "Baobab Extract", "Vitamin E"]
@@ -1388,7 +1460,29 @@
   }
 
   function openBookingModal(serviceId) {
-    activeService = serviceId ? services.find(s => s.id === serviceId) : services[0];
+    if (!serviceId) {
+      const list = document.getElementById('service-picker-list');
+      list.innerHTML = services.map(s => `
+        <div class="service-pick-card" onclick="selectServiceAndBook(${s.id})">
+          <div class="service-pick-icon">${s.icon}</div>
+          <div class="service-pick-info">
+            <div class="service-pick-name">${s.name}</div>
+            <div class="service-pick-meta">${s.duration}</div>
+          </div>
+          <div class="service-pick-price">₦${s.price.toLocaleString()}</div>
+          <svg class="service-pick-arrow" viewBox="0 0 24 24" style="width:16px;height:16px;stroke:var(--plum);fill:none;stroke-width:2;stroke-linecap:round;"><polyline points="9,18 15,12 9,6"/></svg>
+        </div>
+      `).join('');
+      document.getElementById('service-picker-overlay').classList.add('open');
+      document.body.style.overflow = 'hidden';
+    } else {
+      selectServiceAndBook(serviceId);
+    }
+  }
+
+  function selectServiceAndBook(serviceId) {
+    activeService = services.find(s => s.id === serviceId);
+    closeModal('service-picker-overlay');
     document.getElementById('booking-service-name').textContent = activeService.name;
     document.getElementById('booking-service-desc').textContent = activeService.desc;
     document.getElementById('summary-base').textContent = '₦' + activeService.price.toLocaleString();
