--- a/public/admin.html
+++ b/public/admin.html
@@ -512,7 +512,9 @@
 <script>
   /* ── CONFIG ── */
   // Auto-detects environment
-  const BACKEND = (window.location.port === '3000')
+  const BACKEND = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
+    ? 'http://localhost:3000'
+    : 'https://fara-production.up.railway.app'; (window.location.port === '3000')
     ? window.location.origin                  // served by Express directly
     : window.location.port === '5501' || window.location.port === '5500'
       ? 'http://localhost:3000'               // VS Code Live Server
