--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
     {
       id: 6,
       name: "Braiding — Medium",
-      desc: "Medium-sized braids offering the perfect balance between style and manageability for any occasion.",
+      desc: "Medium sized braids offering the perfect balance between style and manageability for any occasion.",
       price: 18000,
       duration: "3 hrs",
       icon: `<svg viewBox="0 0 24 24"><path d="M6 3v18M12 3v18M18 3v18M3 9c0 0 3 3 3 6s-3 6-3 6M9 9c0 0 3 3 3 6s-3 6-3 6M15 9c0 0 3 3 3 6s-3 6-3 6"/></svg>`
